# haji-ai

./: .env.example  .gitignore  CHANGELOG.md  PLAN.md  README.md  RULES.md  demo_server.py  pyproject.toml
examples/full_agent/: __init__.py  api_server.py  prompt_agent.py  rag_agent.py
examples/hello_agent/: __init__.py  hello_agent.py  multi_agent.py  react_agent.py
haiji/: __init__.py
haiji/agent/: __init__.py  base.py  definition.py  exceptions.py  registry.py
haiji/api/: __init__.py  definition.py  server.py
haiji/config/: __init__.py  base.py  definition.py
haiji/context/: __init__.py  definition.py
haiji/designer/: __init__.py  definition.py  designer.py  generator.py  registrar.py  validator.py
haiji/knowledge/: __init__.py  base.py  base_kb.py  chunker.py  definition.py  embedder.py  knowledge_base.py  loader.py  store.py
haiji/llm/: __init__.py  base.py  definition.py
haiji/memory/: __init__.py  base.py  definition.py  persistent.py  user_memory.py
server/: agent_store.py  deps.py  group_decision.py  group_store.py  main.py  models.py  moment_store.py  requirements.txt
tests/: test_agent.py  test_api.py  test_config.py  test_context.py  test_designer.py  test_group_messages.py  test_group_mute.py  test_group_store.py  test_integration_real.py  test_knowledge.py  test_llm.py  test_memory.py  test_observer.py  test_persistent_memory.py  test_prompt.py  test_rag.py  test_sandbox.py  test_skill.py  test_sse.py  test_startup.py  test_tool.py  test_user_memory.py  test_workflow.py  test_workspace.py
ui/: package-lock.json  package.json
(+62 files in other folders)
